sandbox/graphblas/GraphBLAS.h


#define GxB_STDC_VERSION __STDC_VERSION__
#define GxB_STDC_VERSION 199001L
#define GxB_VERSION(major,minor,sub) \
    (((major)*1000ULL + (minor))*1000ULL + (sub))
#define GxB_IMPLEMENTATION_NAME "SuiteSparse:GraphBLAS"
#define GxB_IMPLEMENTATION_DATE "Dec 23, 2022"
#define GxB_IMPLEMENTATION_MAJOR 7
#define GxB_IMPLEMENTATION_MINOR 4
#define GxB_IMPLEMENTATION_SUB   0
#define GxB_SPEC_DATE "Nov 15, 2021"
#define GxB_SPEC_MAJOR 2
#define GxB_SPEC_MINOR 0
#define GxB_SPEC_SUB   0
#define GRB_VERSION     GxB_SPEC_MAJOR
#define GRB_SUBVERSION  GxB_SPEC_MINOR
#define GxB_IMPLEMENTATION \
        GxB_VERSION (GxB_IMPLEMENTATION_MAJOR, \
                     GxB_IMPLEMENTATION_MINOR, \
                     GxB_IMPLEMENTATION_SUB)
#define GxB_SPEC_VERSION GxB_VERSION(GxB_SPEC_MAJOR,GxB_SPEC_MINOR,GxB_SPEC_SUB)
typedef uint64_t GrB_Index ;
#define GrB_INDEX_MAX ((GrB_Index) (1ULL << 60) - 1)
#define GxB_INDEX_MAX ((GrB_Index) (1ULL << 60))
typedef enum
{
    GrB_SUCCESS = 0,            
    GrB_NO_VALUE = 1,           
    GxB_EXHAUSTED = 2,          
    GrB_UNINITIALIZED_OBJECT = -1,  
    GrB_NULL_POINTER = -2,          
    GrB_INVALID_VALUE = -3,         
    GrB_INVALID_INDEX = -4,         
    GrB_DOMAIN_MISMATCH = -5,       
    GrB_DIMENSION_MISMATCH = -6,    
    GrB_OUTPUT_NOT_EMPTY = -7,      
    GrB_NOT_IMPLEMENTED = -8,       
    GrB_PANIC = -101,               
    GrB_OUT_OF_MEMORY = -102,       
    GrB_INSUFFICIENT_SPACE = -103,  
    GrB_INVALID_OBJECT = -104,      
    GrB_INDEX_OUT_OF_BOUNDS = -105, 
    GrB_EMPTY_OBJECT = -106         
}
GrB_Info ;
typedef enum
{
    GrB_NONBLOCKING = 0,        
    GrB_BLOCKING = 1,           
    GxB_NONBLOCKING_GPU = 2,    
    GxB_BLOCKING_GPU = 3,       
}
GrB_Mode ;
extern
GrB_Info GrB_init           
(
    GrB_Mode mode           
) ;
extern
GrB_Info GxB_init           
(
    GrB_Mode mode,          
    void * (* user_malloc_function  ) (size_t),
    void * (* user_calloc_function  ) (size_t, size_t),
    void * (* user_realloc_function ) (void *, size_t),
    void   (* user_free_function    ) (void *)
) ;
extern
GrB_Info GrB_finalize (void) ;     
extern
GrB_Info GrB_getVersion         
(
    unsigned int *version,      
    unsigned int *subversion    
) ;
#define GxB_NTHREADS 5
#define GxB_CHUNK 7
#define GxB_GPU_CONTROL 21
#define GxB_GPU_CHUNK   22
typedef enum
{
    GrB_OUTP = 0,   
    GrB_MASK = 1,   
    GrB_INP0 = 2,   
    GrB_INP1 = 3,   
    GxB_DESCRIPTOR_NTHREADS = GxB_NTHREADS,     
    GxB_DESCRIPTOR_CHUNK = GxB_CHUNK,   
    GxB_DESCRIPTOR_GPU_CONTROL = GxB_GPU_CONTROL,
    GxB_DESCRIPTOR_GPU_CHUNK   = GxB_GPU_CHUNK,
    GxB_AxB_METHOD = 1000,  
    GxB_SORT = 35,          
    GxB_COMPRESSION = 36,   
    GxB_IMPORT = 37,        
}
GrB_Desc_Field ;
typedef enum
{
    GxB_DEFAULT = 0,    
    GrB_REPLACE = 1,    
    GrB_COMP = 2,       
    GrB_STRUCTURE = 4,  
    GrB_TRAN = 3,       
    GxB_GPU_ALWAYS  = 2001,
    GxB_GPU_NEVER   = 2002,
    GxB_AxB_GUSTAVSON = 1001,   
    GxB_AxB_DOT       = 1003,   
    GxB_AxB_HASH      = 1004,   
    GxB_AxB_SAXPY     = 1005,   
    GxB_SECURE_IMPORT = 502     
}
GrB_Desc_Value ;
#define GxB_FAST_IMPORT GxB_DEFAULT
typedef struct GB_Descriptor_opaque *GrB_Descriptor ;
extern
GrB_Info GrB_Descriptor_new     
(
    GrB_Descriptor *descriptor  
) ;
extern
GrB_Info GrB_Descriptor_set     
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    GrB_Desc_Value val          
) ;
extern
GrB_Info GxB_Descriptor_get     
(
    GrB_Desc_Value *val,        
    GrB_Descriptor desc,        
    GrB_Desc_Field field        
) ;
extern
GrB_Info GxB_Desc_set           
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    ...                         
) ;
extern
GrB_Info GxB_Desc_set_INT32     
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    int32_t value               
) ;
extern
GrB_Info GxB_Desc_set_FP64      
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    double value                
) ;
extern
GrB_Info GxB_Desc_get           
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    ...                         
) ;
extern
GrB_Info GxB_Desc_get_INT32     
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    int32_t *value              
) ;
extern
GrB_Info GxB_Desc_get_FP64      
(
    GrB_Descriptor desc,        
    GrB_Desc_Field field,       
    double *value               
) ;
extern
GrB_Info GrB_Descriptor_free    
(
    GrB_Descriptor *descriptor  
) ;
extern
GrB_Descriptor     
GrB_DESC_T1      , 
GrB_DESC_T0      , 
GrB_DESC_T0T1    , 
GrB_DESC_C       , 
GrB_DESC_CT1     , 
GrB_DESC_CT0     , 
GrB_DESC_CT0T1   , 
GrB_DESC_S       , 
GrB_DESC_ST1     , 
GrB_DESC_ST0     , 
GrB_DESC_ST0T1   , 
GrB_DESC_SC      , 
GrB_DESC_SCT1    , 
GrB_DESC_SCT0    , 
GrB_DESC_SCT0T1  , 
GrB_DESC_R       , 
GrB_DESC_RT1     , 
GrB_DESC_RT0     , 
GrB_DESC_RT0T1   , 
GrB_DESC_RC      , 
GrB_DESC_RCT1    , 
GrB_DESC_RCT0    , 
GrB_DESC_RCT0T1  , 
GrB_DESC_RS      , 
GrB_DESC_RST1    , 
GrB_DESC_RST0    , 
GrB_DESC_RST0T1  , 
GrB_DESC_RSC     , 
GrB_DESC_RSCT1   , 
GrB_DESC_RSCT0   , 
GrB_DESC_RSCT0T1 ; 
typedef struct GB_Type_opaque *GrB_Type ;
extern GrB_Type
    GrB_BOOL   ,        
    GrB_INT8   ,        
    GrB_INT16  ,        
    GrB_INT32  ,        
    GrB_INT64  ,        
    GrB_UINT8  ,        
    GrB_UINT16 ,        
    GrB_UINT32 ,        
    GrB_UINT64 ,        
    GrB_FP32   ,        
    GrB_FP64   ,        
    GxB_FC32   ,        
    GxB_FC64   ;        
extern
GrB_Info  (Type_new)         
(
    GrB_Type *type,             
    size_t sizeof_ctype         
) ;
#define GxB_MAX_NAME_LEN 128
extern
GrB_Info GxB_Type_new           
(
    GrB_Type *type,             
    size_t sizeof_ctype,        
    const char *type_name,      
    const char *type_defn       
) ;
extern
GrB_Info GB_Type_new            
(
    GrB_Type *type,             
    size_t sizeof_ctype,        
    const char *type_name       
) ;
extern
GrB_Info GxB_Type_name      
(
    char *type_name,        
    const GrB_Type type
) ;
extern
GrB_Info GxB_Type_size          
(
    size_t *size,               
    const GrB_Type type         
) ;
extern
GrB_Info GxB_Type_from_name     
(
    GrB_Type *type,             
    const char *type_name       
) ;
extern
GrB_Info GrB_Type_free          
(
    GrB_Type *type              
) ;