Packages_2024/graphblas_7.4.0/fp_graphblas.pas

unit fp_graphblas;

interface

const
  {$IFDEF linux}
  libgraphblas = 'graphblas';
  {$ENDIF}

  {$IFDEF windows}
  libgraphblas = 'libgraphblas.dll';
  {$ENDIF}

type
  Tuint8_t = uint8;
  Puint8_t = ^Tuint8_t;
  PPuint8_t = ^Puint8_t;
  Tuint16_t = uint16;
  Puint16_t = ^Tuint16_t;
  PPuint16_t = ^Puint16_t;
  Tuint32_t = uint32;
  Puint32_t = ^Tuint32_t;
  PPuint32_t = ^Puint32_t;
  Tuint64_t = uint64;
  Puint64_t = ^Tuint64_t;
  PPuint64_t = ^Puint64_t;

  Tint8_t = int8;
  Pint8_t = ^Tint8_t;
  PPint8_t = ^Pint8_t;
  Tint16_t = int16;
  Pint16_t = ^Tint16_t;
  PPint16_t = ^Pint16_t;
  Tint32_t = int32;
  Pint32_t = ^Tint32_t;
  PPint32_t = ^Pint32_t;
  Tint64_t = int64;
  Pint64_t = ^Tint64_t;
  PPint64_t = ^Pint64_t;

  TSize_t = SizeUInt;
  PSize_t = ^TSize_t;

  PFILE = type Pointer;

const
  INT64_MAX = 9223372036854775807;  // 2^63 - 1

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}


const
  GxB_STDC_VERSION = 199001;

type
  TGxB_FC32_t = record
    re, im: single;
  end;
  PGxB_FC32_t = ^TGxB_FC32_t;

  TGxB_FC64_t = record
    re, im: double;
  end;
  PGxB_FC64_t = ^TGxB_FC64_t;

function GxB_VERSION(major, minor, sub: longint): longint;

const
  GxB_IMPLEMENTATION_NAME = 'SuiteSparse:GraphBLAS';
  GxB_IMPLEMENTATION_DATE = 'Dec 23, 2022';
  GxB_IMPLEMENTATION_MAJOR = 7;
  GxB_IMPLEMENTATION_MINOR = 4;
  GxB_IMPLEMENTATION_SUB = 0;
  GxB_SPEC_DATE = 'Nov 15, 2021';
  GxB_SPEC_MAJOR = 2;
  GxB_SPEC_MINOR = 0;
  GxB_SPEC_SUB = 0;
  GRB_VERSION = GxB_SPEC_MAJOR;
  GRB_SUBVERSION = GxB_SPEC_MINOR;

function GxB_IMPLEMENTATION: longint;

function GxB_SPEC_VERSION: longint;

type
  PPGrB_Index = ^PGrB_Index;
  PGrB_Index = ^TGrB_Index;
  TGrB_Index = Tuint64_t;

function GrB_INDEX_MAX: longint;

function GxB_INDEX_MAX: TGrB_Index;

type
  PGrB_Info = ^TGrB_Info;
  TGrB_Info = longint;

const
  GrB_SUCCESS = 0;
  GrB_NO_VALUE = 1;
  GxB_EXHAUSTED = 2;
  GrB_UNINITIALIZED_OBJECT = -(1);
  GrB_NULL_POINTER = -(2);
  GrB_INVALID_VALUE = -(3);
  GrB_INVALID_INDEX = -(4);
  GrB_DOMAIN_MISMATCH = -(5);
  GrB_DIMENSION_MISMATCH = -(6);
  GrB_OUTPUT_NOT_EMPTY = -(7);
  GrB_NOT_IMPLEMENTED = -(8);
  GrB_PANIC = -(101);
  GrB_OUT_OF_MEMORY = -(102);
  GrB_INSUFFICIENT_SPACE = -(103);
  GrB_INVALID_OBJECT = -(104);
  GrB_INDEX_OUT_OF_BOUNDS = -(105);
  GrB_EMPTY_OBJECT = -(106);

type
  PGrB_Mode = ^TGrB_Mode;
  TGrB_Mode = longint;

const
  GrB_NONBLOCKING = 0;
  GrB_BLOCKING = 1;
  GxB_NONBLOCKING_GPU = 2;
  GxB_BLOCKING_GPU = 3;

function GrB_init(mode: TGrB_Mode): TGrB_Info; cdecl; external libgraphblas;

type
  TUserMalloc = function(size: TSize_t): Pointer; cdecl;
  TUserCalloc = function(count: TSize_t; size: TSize_t): Pointer; cdecl;
  TUserRealloc = function(p: Pointer; size: TSize_t): Pointer; cdecl;
  TUserFree = procedure(p: Pointer); cdecl;

function GxB_init(mode: TGrB_Mode; user_malloc: TUserMalloc; user_calloc: TUserCalloc; user_realloc: TUserRealloc; user_free: TUserFree): TGrB_Info; cdecl; external libgraphblas;
function GrB_finalize: TGrB_Info; cdecl; external libgraphblas;
function GrB_getVersion(version: Pdword; subversion: Pdword): TGrB_Info; cdecl; external libgraphblas;

const
  GxB_NTHREADS = 5;
  GxB_CHUNK = 7;
  GxB_GPU_CONTROL = 21;
  GxB_GPU_CHUNK = 22;

type
  PGrB_Desc_Field = ^TGrB_Desc_Field;
  TGrB_Desc_Field = longint;

const
  GrB_OUTP = 0;
  GrB_MASK = 1;
  GrB_INP0 = 2;
  GrB_INP1 = 3;
  GxB_DESCRIPTOR_NTHREADS = GxB_NTHREADS;
  GxB_DESCRIPTOR_CHUNK = GxB_CHUNK;
  GxB_DESCRIPTOR_GPU_CONTROL = GxB_GPU_CONTROL;
  GxB_DESCRIPTOR_GPU_CHUNK = GxB_GPU_CHUNK;
  GxB_AxB_METHOD = 1000;
  GxB_SORT = 35;
  GxB_COMPRESSION = 36;
  GxB_IMPORT = 37;

type
  PGrB_Desc_Value = ^TGrB_Desc_Value;
  TGrB_Desc_Value = longint;

const
  GxB_DEFAULT = 0;
  GrB_REPLACE = 1;
  GrB_COMP = 2;
  GrB_STRUCTURE = 4;
  GrB_TRAN = 3;
  GxB_GPU_ALWAYS = 2001;
  GxB_GPU_NEVER = 2002;
  GxB_AxB_GUSTAVSON = 1001;
  GxB_AxB_DOT = 1003;
  GxB_AxB_HASH = 1004;
  GxB_AxB_SAXPY = 1005;
  GxB_SECURE_IMPORT = 502;
  GxB_FAST_IMPORT = GxB_DEFAULT;

type
  PGrB_Descriptor = ^TGrB_Descriptor;
  TGrB_Descriptor = Pointer;

function GrB_Descriptor_new(descriptor: PGrB_Descriptor): TGrB_Info; cdecl; external libgraphblas;
function GrB_Descriptor_set(desc: TGrB_Descriptor; field: TGrB_Desc_Field; val: TGrB_Desc_Value): TGrB_Info; cdecl; external libgraphblas;
function GxB_Descriptor_get(val: PGrB_Desc_Value; desc: TGrB_Descriptor; field: TGrB_Desc_Field): TGrB_Info; cdecl; external libgraphblas;
function GxB_Desc_set(desc: TGrB_Descriptor; field: TGrB_Desc_Field): TGrB_Info; cdecl; varargs; external libgraphblas;
function GxB_Desc_set_INT32(desc: TGrB_Descriptor; field: TGrB_Desc_Field; value: Tint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Desc_set_FP64(desc: TGrB_Descriptor; field: TGrB_Desc_Field; value: double): TGrB_Info; cdecl; external libgraphblas;
function GxB_Desc_get(desc: TGrB_Descriptor; field: TGrB_Desc_Field): TGrB_Info; cdecl; varargs; external libgraphblas;
function GxB_Desc_get_INT32(desc: TGrB_Descriptor; field: TGrB_Desc_Field; value: Pint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Desc_get_FP64(desc: TGrB_Descriptor; field: TGrB_Desc_Field; value: Pdouble): TGrB_Info; cdecl; external libgraphblas;
function GrB_Descriptor_free(descriptor: PGrB_Descriptor): TGrB_Info; cdecl; external libgraphblas;

var
  GrB_DESC_T1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_T0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_T0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_C: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_CT1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_CT0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_CT0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_S: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_ST1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_ST0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_ST0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_SC: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_SCT1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_SCT0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_SCT0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_R: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RT1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RT0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RT0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_RC: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RCT1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RCT0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RCT0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_RS: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RST1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RST0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RST0T1: TGrB_Descriptor; cvar; external libgraphblas;

  GrB_DESC_RSC: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RSCT1: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RSCT0: TGrB_Descriptor; cvar; external libgraphblas;
  GrB_DESC_RSCT0T1: TGrB_Descriptor; cvar; external libgraphblas;

type
  PGrB_Type = ^TGrB_Type;
  TGrB_Type = Pointer;

var
  GrB_BOOL: TGrB_Type; cvar;external libgraphblas;
  GrB_INT8: TGrB_Type; cvar; external libgraphblas;
  GrB_INT16: TGrB_Type; cvar; external libgraphblas;
  GrB_INT32: TGrB_Type; cvar; external libgraphblas;
  GrB_INT64: TGrB_Type; cvar; external libgraphblas;
  GrB_UINT8: TGrB_Type; cvar; external libgraphblas;
  GrB_UINT16: TGrB_Type; cvar; external libgraphblas;
  GrB_UINT32: TGrB_Type; cvar; external libgraphblas;
  GrB_UINT64: TGrB_Type; cvar; external libgraphblas;
  GrB_FP32: TGrB_Type; cvar; external libgraphblas;
  GrB_FP64: TGrB_Type; cvar; external libgraphblas;
  GxB_FC32: TGrB_Type; cvar; external libgraphblas;
  GxB_FC64: TGrB_Type; cvar; external libgraphblas;

function Type_new(_type: PGrB_Type; sizeof_ctype: Tsize_t): TGrB_Info; cdecl; external libgraphblas;

const
  GxB_MAX_NAME_LEN = 128;

function GxB_Type_new(_type: PGrB_Type; sizeof_ctype: Tsize_t; type_name: pchar; type_defn: pchar): TGrB_Info; cdecl; external libgraphblas;
function GB_Type_new(_type: PGrB_Type; sizeof_ctype: Tsize_t; type_name: pchar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Type_name(type_name: pchar; _type: TGrB_Type): TGrB_Info; cdecl; external libgraphblas;
function GxB_Type_size(size: Psize_t; _type: TGrB_Type): TGrB_Info; cdecl; external libgraphblas;
function GxB_Type_from_name(_type: PGrB_Type; type_name: pchar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Type_free(_type: PGrB_Type): TGrB_Info; cdecl; external libgraphblas;

type
  PGrB_UnaryOp = ^TGrB_UnaryOp;
  TGrB_UnaryOp = Pointer;

var
  GrB_IDENTITY_BOOL: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_BOOL: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_BOOL: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_BOOL: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_INT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_INT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_INT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_INT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_INT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_INT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_INT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_INT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_INT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_INT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_INT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_INT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_INT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_INT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_INT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_INT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_UINT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_UINT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_UINT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_UINT8: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_UINT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_UINT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_UINT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_UINT16: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_UINT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_UINT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_UINT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_UINT32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_UINT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_UINT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_UINT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_UINT64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_FP32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_FP32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_FP32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_FP32: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_IDENTITY_FP64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_AINV_FP64: TGrB_UnaryOp; cvar;external libgraphblas;
  GrB_MINV_FP64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_LNOT_FP64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_IDENTITY_FC32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_AINV_FC32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_MINV_FC32: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_IDENTITY_FC64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_AINV_FC64: TGrB_UnaryOp; cvar;external libgraphblas;
  GxB_MINV_FC64: TGrB_UnaryOp; cvar;external libgraphblas;
